wip keycloak auth

--- a/front-end/src/components/navBar/navBar.css
+++ b/front-end/src/components/navBar/navBar.css
@@ -23,3 +23,12 @@
     padding: 5px;
     /* position: fixed; */
 }
+
+#navbar-logout {
+    background-color: var(--color-button);
+    border: none;
+}
+
+#navbar-logout:hover {
+    background-color: var(--color-button-hover);
+}
