--- a/front-end/src/components/loginModal/login.css
+++ b/front-end/src/components/loginModal/login.css
@@ -1,10 +1,16 @@
-#login_button {
+#navbar-login, #navbar-logout {
     background-color: var(--color-button);
     border: none;
+    font-weight: 500;
 }
 
-#login_button:hover {
-    background-color: var(--color-button-hover);
+#navbar-login:hover, #navbar-logout:hover {
+    color: var(--color-button);
+    background-color: rgb(222, 178, 178);
+}
+
+.text-muted {
+    font-size: .5em;
 }
 
 .modal-title {
