keycloak sig in/up works

--- a/front-end/src/components/loginModal/login.css
+++ b/front-end/src/components/loginModal/login.css
@@ -9,6 +9,25 @@
     background-color: rgb(222, 178, 178);
 }
 
+#navbar-logout {
+    margin: auto 5px;
+}
+
+#navbar-username {
+    background-color: var(--color-button-bg-username);
+    color: var(--color-text-alt);
+    
+    justify-content: flex-end;
+    
+    line-height: 2.2rem;
+    width: min-content;
+    
+    font-weight: 800;
+
+    border: none;
+    border-radius: 6px;
+}
+
 .text-muted {
     font-size: .5em;
 }
