--- a/front-end/src/components/previewCarousel/previewCarousel.css
+++ b/front-end/src/components/previewCarousel/previewCarousel.css
@@ -15,6 +15,9 @@
 
 .carousel-item {
   height: 400px;
+  border-radius: var(--border-radius);
+  background-color: var(--color-text-light);
+  margin-bottom: 10px;
 }
 
 .my-carousel-caption {
@@ -25,6 +28,7 @@
 }
 
 .carousel-img {
+  border-radius: var(--border-radius);
   display: flex;
   justify-content: center;
   height: 260px;
