--- a/front-end/src/components/navBar/navBar.css
+++ b/front-end/src/components/navBar/navBar.css
@@ -1,35 +1,21 @@
-
 .navbar{
-    display: flex;
-    justify-content: center;
     margin: 10px auto;
-    border-radius: var(--border-radius);
     width: 70%;
+
+    border-radius: var(--border-radius);
 }
 
-.navbar a {
-    margin-left: 10px;
-}
-
-.navbar_entry {
-    text-decoration: none;
+.navbar-page_link {
     color: var(--color-text-alt);
-    margin: 0 1rem;
-
+   
+    text-decoration: none;
     font-weight: 450;
     font-size: 22px;
-    padding: 5px;
 }
 
-.navbar_entry:hover {
+.navbar-page_link:hover {
     /* text-decoration: underline; */
     color: white;
     background-color: var(--color-text);
-    border-radius: var(--border-radius);
-    padding: 5px;
-}
-
-
-#navbar-login {
-    margin-right: 5px;   
+    border-radius: 6px;
 }
