preview page done

--- a/front-end/src/components/navBar/accountControl/accountControl.css
+++ b/front-end/src/components/navBar/accountControl/accountControl.css
@@ -23,7 +23,7 @@
     font-weight: 800;
 
     border: none;
-    border-radius: 6px;
+    border-radius: calc(var(--border-radius) / 2);;
 }
 
 .dropdown-menu > a:active {
