--- a/front-end/src/components/navBar/navBar.css
+++ b/front-end/src/components/navBar/navBar.css
@@ -1,13 +1,16 @@
-.navbar{
+#navbar-container {
     margin: 10px auto;
-    width: 70%;
+    width: 85vmax;
+    padding: 0;
+}
 
+.navbar {
     border-radius: var(--border-radius);
 }
 
 .navbar-page_link {
     color: var(--color-text-alt);
-   
+
     text-decoration: none;
     font-weight: 450;
     font-size: 22px;
@@ -17,5 +20,5 @@
     /* text-decoration: underline; */
     color: white;
     background-color: var(--color-text);
-    border-radius: 6px;
+    border-radius: calc(var(--border-radius)/2)
 }
