--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,18 +1,17 @@
 * {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
     scroll-behavior: smooth;
-    font-family: var(--font-family);
 }
 
 body {
+    font-family: var(--font-family);
     background: var(--color-bg);
 }
 
 #main-container {
+    width: 85vmax;
+    height: 95vmin;
     border-radius: 12px;
     background-color: var(--color-bg-front);
-    width: 70%;
-    margin: auto;
-  }
+    padding: 0;
+}
