--- a/front-end/src/components/previewCarousel/previewCarousel.css
+++ b/front-end/src/components/previewCarousel/previewCarousel.css
@@ -1,3 +1,8 @@
+#carousel-container {
+  max-height: 60vh;
+  overflow: auto;
+}
+
 .carousel-item {
   height: 400px;
   border-radius: var(--border-radius);
