--- a/front-end/src/components/navBar/navBar.css
+++ b/front-end/src/components/navBar/navBar.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+#navbar-brand {
+    margin: 1rem;
+    position: relative;
+}
 
 .navbar {
     border-radius: var(--border-radius);
