Frontend done typically. Next iteration with api calls.

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -9,9 +9,12 @@ body {
 }
 
 #main-container {
+    display: flex;
+    flex-direction: column;
     width: 85vmax;
     height: 65vh;
     border-radius: 12px;
     background-color: var(--color-bg-front);
     padding: 0;
+    overflow: scroll;
 }
