--- a/front-end/src/components/navBar/accountControl/accountControl.css
+++ b/front-end/src/components/navBar/accountControl/accountControl.css
@@ -16,7 +16,7 @@
 
 #navbar-username {
     background-color: var(--color-button-bg-username);
-    color: var(--color-text-alt);
+    color: var(--color-bg);
 
     line-height: 2.2rem;
 
@@ -36,4 +36,5 @@
 
 .dropdown-menu {
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.6);
+    border: 1px solid var(--color-button-bg-username) !important;
 }
