--- a/front-end/src/pages/home/home.css
+++ b/front-end/src/pages/home/home.css
@@ -1,8 +1,7 @@
 #header-container {
   display: flex;
   justify-content: center;
-  margin: 1rem 0;
-  padding: 1rem 0 0 0;
+  padding: 1rem 0;
   color: var(--color-text-alt);
 }
 
