--- a/front-end/src/components/previewCarousel/previewCarousel.css
+++ b/front-end/src/components/previewCarousel/previewCarousel.css
@@ -1,25 +1,79 @@
-#carousel-container {
-  max-height: 60vh;
-  overflow: auto;
+.carousel-container {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
 }
 
-.carousel-item {
-  height: 400px;
+.carousel-center-container {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 80%;
+}
+
+.carousel-img-container {
+  background-color: white;
   border-radius: var(--border-radius);
-  background-color: var(--color-text-light);
-  margin-bottom: 10px;
-}
-
-.my-carousel-caption {
-  padding-top: 2rem;
-  text-align: center;
-  color: var(--color-text-alt);
-  font-size: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
 }
 
 .carousel-img {
-  border-radius: var(--border-radius);
+  width: auto;
   display: flex;
   justify-content: center;
-  height: 260px;
+  align-items: center;
+}
+
+.carousel-img>img {
+  height: 300px;
+}
+
+@keyframes fade-in {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.active-img {
+  animation: fade-in 1s;
+  animation-fill-mode: forwards;
+}
+
+.carousel-arrow-indicator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 10%;
+}
+
+.carousel-arrow-indicator:hover {
+  cursor: pointer;
+  background-color: rgba(245, 245, 245, 0.372);
+}
+
+.carousel-img-text {
+  margin: 1rem 0;
+}
+
+.carousel-img-text>#img-title {
+  color: var(--color-button);
+  font-weight: 600;
+}
+
+.carousel-indicator-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+@keyframes change-indicator {
+  0% {transform: scale(1, 1);}
+  100% {transform: scale(2, 3);}
+}
+
+.active-indicator {
+  animation: change-indicator .2s;
+  animation-fill-mode: forwards;
 }
