--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -20,5 +20,5 @@
 
   --color-button: #961f16;
   --color-button-hover: rgb(222, 178, 178);
-  --color-button-bg-username: #c0d9ba;
+  --color-button-bg-username: rgba(192, 217, 186, 0.824);
 }
