--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -10,6 +10,7 @@
   --border-radius: 12px;
 
   --color-bg: #4d1111e7;
+  --color-bg-transparent: #4d1111a7;
   --color-bg-front: #e6b1b1f1;
   --color-transparent: #ffffff00;
 
