--- a/front-end/src/components/navBar/userProfileCard/userProfileCard.css
+++ b/front-end/src/components/navBar/userProfileCard/userProfileCard.css
@@ -5,6 +5,7 @@
   padding: 20px;
   border-radius: 10px;
   background-color: white;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.6);
 }
 
 .user-info-header {
