--- a/front-end/src/pages/about/about.css
+++ b/front-end/src/pages/about/about.css
@@ -1,10 +1,9 @@
-#about-container {
+.about-container {
     border-radius: var(--border-radius);
     background-color: var(--color-text-light);
     
     height: calc(100% - 1rem);
-    width: calc(100% - 1rem);
+    width: calc(100% - 1rem) !important;
 
     position: relative;
-    top: .5rem;
 }
