--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -20,6 +20,6 @@
   --color-text-light-alt: #bd9b98;
 
   --color-button: #961f16;
-  --color-button-hover: rgb(222, 178, 178);
+  --color-button-hover: #deb2b2;
   --color-button-bg-username: rgba(192, 217, 186, 0.824);
 }
