--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -13,7 +13,7 @@ body {
     flex-direction: column;
     /* align-items: flex-start;     */
     justify-content: flex-start !important;    
-    gap: 5px;
+    gap: 1rem;
     padding: 0;
 
     width: 85vmax;
