Mocked some api calls.

--- a/front-end/src/pages/myCharts/myCharts.css
+++ b/front-end/src/pages/myCharts/myCharts.css
@@ -42,7 +42,7 @@
 
 .preview-card {
     border: none !important;
-    background-color: var(--color-button) !important;
+    /* background-color: var(--color-button) !important; */
 }
 
 .preview-card>p,
