--- a/front-end/src/pages/myCharts/myCharts.css
+++ b/front-end/src/pages/myCharts/myCharts.css
@@ -42,6 +42,7 @@
 
 .preview-card {
     border: none !important;
+    background-color: var(--color-button) !important;
     /* background-color: var(--color-button) !important; */
 }
 
@@ -56,6 +57,7 @@
 .card-text {
     font-weight: 700;
     color: var(--color-text-light);
+    /* background-color: var(--color-text); */
 }
 
 .card-title {
