minor front-end changes

--- a/front-end/src/components/newUserOffcanvas/newUserOffcanvas.css
+++ b/front-end/src/components/newUserOffcanvas/newUserOffcanvas.css
@@ -7,3 +7,7 @@
     background-color: var(--color-button-hover);
     color: var(--color-button);
 }
+
+.offcanvas {
+    border-radius: 0 var(--border-radius) var(--border-radius) 0;
+}
